--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <h4>Don't you have a profile? <a class="register" href="">Register</a></h4>
                 <div class="icons">
                 	<a class="social google" href=""><img src="images/google.svg" alt=""></a>
-                	<a class="social gitgub" href=""><img src="images/github.svg" alt=""></a>
+                	<a class="social github" href=""><img src="images/github.svg" alt=""></a>
                 	<a class="social fb" href=""><img src="images/fb.svg" alt=""></a>
                 	<a class="social vk" href=""><img src="images/vk.svg" alt=""></a>
                 </div>
